ENG-18112: backport java 11 support to v8.4 (#7181)
* ENG-15241: compile voltdb in java 8 and make it runnable in java 11

* pass fileDescriptor object to native

* remove unsupport jvm option

* fix appClassLoader change caused test failure

* fix NumberFormatException change caused test failure

* fix jni GetIntField passing wrong object

* upgrade mockito and powerMock uptodate for java9+

* stricter match for mockito2

* classLoader path for new test

* cleanup some obsolete code

* replace javaClass-1.7 with JAXB package and dependencies

* update felix version for support java 9+

* address the reviews

* update jetty for java11 support

* update Session Management for jetty 9.4

* ENG-18284: add cddl license in thirdyParty for jaxb (#6658)

* ENG-18284: add cddl license in thirdyParty for jaxb

* update more pacakges; also add edl license

* ENG-15874: remove unnessary lookup for cleaner() in Java 11 UnsafeDirectBufferCleaner (#6157)

* ENG-17757: explicitily check cleaner() field for distiguish managed buffers vs unmanged buffers (#6636)

* ENG-15690: fix jetty session invalidation npe (#6047)

* ENG-15690: fix jetty session invalidation npe

* correctly ignore the dynamically encrypted field

* ENG-17757 use designated container for native direct allocated memory (#6639)

* ENG-15830: Suppress Illegal reflective access warning in JAVA 11 (#6133)

* ENG-15863: Suppress Illegal reflective access warning for sqlcmd in JAVA 11 (#6300)

* ENG-15863: Suppress Illegal reflective access warning for sqlcmd

* simplify the regex for match java version

* fix cherry-pick mistakes

* remove obslate jars

Co-authored-by: Zeeman He <zhe@voltdb.com>